--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2356,7 +2356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2416,7 +2416,7 @@
     "from datetime import datetime\n",
     "\n",
     "meso_trace = dataset.meso.meso_tiff\n",
-    "meso_times = dataset.meso_meta.TimeReceivedByCore\n",
+    "meso_times = dataset.meso_metaTimeReceivedByCore\n",
     "\n",
     "output_notebook()\n",
     "\n",
@@ -3437,7 +3437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -5017,6 +5017,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
